# stm32_cubemx_termo

./: .gitmodules  Makefile  packet_in.json  packet_out.json
components/termo/: CMakeLists.txt  termo.c  termo.h
components/termo/common/: CMakeLists.txt  termo_common.h  termo_err.c  termo_err.h  termo_event.h  termo_log.c  termo_log.h  termo_manager.c  termo_manager.h  termo_notify.h  termo_utility.h
components/termo/control_task/: CMakeLists.txt  control_manager.c  control_manager.h  control_task.c  control_task.h
components/termo/display_task/: CMakeLists.txt  display_manager.c  display_manager.h  display_task.c  display_task.h
components/termo/display_task/display_utility/: CMakeLists.txt  font5x7.c  font5x7.h
components/termo/packet_task/: CMakeLists.txt  packet_in.c  packet_in.h  packet_manager.c  packet_manager.h  packet_out.c  packet_out.h  packet_task.c  packet_task.h
components/termo/system_task/: CMakeLists.txt  system_manager.c  system_manager.h  system_task.c  system_task.h
components/termo/termo_task/: CMakeLists.txt  termo_manager.c  termo_manager.h  termo_task.c  termo_task.h
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: main.h  stm32f4xx_it.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
cubemx/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c  usb_otg.c
cubemx/USB_DEVICE/App/: usbd_cdc_if.c
cubemx/cmake/: gcc-arm-none-eabi.cmake
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  callbacks.c  config.h  main.c  syscalls.c
make/: flash.mk
requirements/: submodules.txt
