add_library(system_task STATIC)

target_sources(system_task PRIVATE 
    system_manager.c
    system_task.c
)

target_link_libraries(system_task PUBLIC
    common
    stm32cubemx
)

target_include_directories(system_task PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_compile_options(system_task PUBLIC
    -std=c23
    -Wall
    -Wextra
    -Wconversion
    -Wshadow
    -Wpedantic
    -Wnarrowing
    -Waddress
    -pedantic
    -Wdeprecated
    -Wsign-conversion
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wcast-align
    -Wformat=2
    -Wformat-security
    -Wmissing-prototypes
    -Wmissing-declarations
    -Wstrict-prototypes
    -Wold-style-definition
    -Wundef
    -Wvla
    -Wpointer-arith
    -Wstrict-aliasing=2
)
